@@ -1,21 +1,12 @@
 package dev.latvian.mods.unit.token;
 
 import dev.latvian.mods.unit.ColorUnit;
-import dev.latvian.mods.unit.FixedNumberUnit;
 import dev.latvian.mods.unit.Unit;
 import dev.latvian.mods.unit.UnitContext;
-import dev.latvian.mods.unit.VariableUnit;
-import dev.latvian.mods.unit.function.FuncUnit;
-import dev.latvian.mods.unit.operator.OpUnit;
 
-import java.util.LinkedList;
-import java.util.Stack;
+import java.util.ArrayList;
 
 public final class UnitTokenStream {
-	private static boolean isString(char c) {
-		return c >= '0' && c <= '9' || c >= 'a' && c <= 'z' || c >= 'A' && c <= 'Z' || c == '_' || c == '$' || c == '.';
-	}
-
 	private static boolean isHex(char c) {
 		return c >= '0' && c <= '9' || c >= 'a' && c <= 'f' || c >= 'A' && c <= 'F';
 	}
@@ -24,16 +15,18 @@ public final class UnitTokenStream {
 
 	public final String input;
 	public final CharStream charStream;
-	public final LinkedList<Unit> infix;
-	public final Stack<Unit> resultStack;
+	public final ArrayList<UnitToken> infix;
+	public final ArrayList<Integer> inputStringPos;
+	private int infixPos;
 	public final Unit unit;
 
 	public UnitTokenStream(UnitContext context, String input) {
 		this.context = context;
 		this.input = input;
 		this.charStream = new CharStream(input.toCharArray());
-		this.infix = new LinkedList<>();
-		this.resultStack = new Stack<>();
+		this.infix = new ArrayList<>();
+		this.inputStringPos = new ArrayList<>();
+		this.infixPos = -1;
 
 		var current = new StringBuilder();
 
@@ -44,6 +37,7 @@ public final class UnitTokenStream {
 				break;
 			}
 
+			int cpos = charStream.position;
 			var symbol = UnitSymbol.read(c, charStream);
 
 			if (symbol == UnitSymbol.HASH) {
@@ -59,27 +53,24 @@ public final class UnitTokenStream {
 					var color = Long.decode(current.toString()).intValue();
 					current.setLength(0);
 
+					inputStringPos.add(cpos);
 					infix.add(new ColorUnit(color, alpha));
 				} else {
 					throw new IllegalStateException("Invalid color code @ " + charStream.position);
 				}
 			} else {
 				if (symbol != null && current.length() > 0) {
-					infix.add(createTokenFromString(current.toString()));
+					inputStringPos.add(cpos);
+					infix.add(new StringUnitToken(current.toString()));
 					current.setLength(0);
 				}
 
-				if (symbol == UnitSymbol.SUB && (infix.isEmpty() || infix.getLast().shouldNegate())) {
-					if (!infix.isEmpty() && infix.getLast() instanceof FixedNumberUnit num) {
-						infix.removeLast();
-						infix.add(FixedNumberUnit.ofFixed(-num.value));
-					} else {
-						infix.add(UnitSymbol.NEGATE.op.create());
-					}
-				} else if (symbol != null && symbol.op != null) {
-					infix.add(symbol.op.create());
+				if (symbol == UnitSymbol.SUB && (infix.isEmpty() || infix.get(infix.size() - 1).shouldNegate())) {
+					inputStringPos.add(cpos);
+					infix.add(UnitSymbol.NEGATE);
 				} else if (symbol != null) {
-					infix.add(symbol.unit);
+					inputStringPos.add(cpos);
+					infix.add(symbol);
 				} else {
 					current.append(c);
 				}
@@ -87,12 +78,13 @@ public final class UnitTokenStream {
 		}
 
 		if (current.length() > 0) {
-			infix.add(createTokenFromString(current.toString()));
+			inputStringPos.add(charStream.position - current.length());
+			infix.add(new StringUnitToken(current.toString()));
 			current.setLength(0);
 		}
 
 		if (infix.size() == 1) {
-			unit = infix.getFirst();
+			unit = infix.get(0).interpret(this);
 			return;
 		}
 
@@ -100,163 +92,104 @@ public final class UnitTokenStream {
 			context.debugInfo("Infix", infix);
 		}
 
-		Stack<Unit> operatorsStack = new Stack<>();
-		LinkedList<Unit> postfix = new LinkedList<>();
-
-		for (Unit next : infix) {
-			if (context.isDebug()) {
-				context.debugInfo("> " + next);
-			}
-
-			if (UnitSymbol.COMMA.is(next)) {
-				while (!UnitSymbol.LP.is(operatorsStack.peek())) {
-					postfix.add(operatorsStack.pop());
-
-					if (context.isDebug()) {
-						context.debugInfo("Operator Stack", operatorsStack);
-						context.debugInfo("Operand Stack", postfix);
-					}
-				}
-			} else if (next instanceof OpUnit nextOperator) {
-				boolean pushedCurrent = false;
-				while (!operatorsStack.isEmpty()) {
-					var o = operatorsStack.peek() instanceof OpUnit t ? t : null;
-
-					if (o != null) {
-						if (o.hasHigherPrecedenceThan(nextOperator)) {
-							postfix.add(operatorsStack.pop());
-
-							if (context.isDebug()) {
-								context.debugInfo("Operator Stack", operatorsStack);
-								context.debugInfo("Operand Stack", postfix);
-							}
-						} else {
-							pushedCurrent = true;
-
-							if (!nextOperator.shouldSkip()) {
-								operatorsStack.push(nextOperator);
-
-								if (context.isDebug()) {
-									context.debugInfo("Operator Stack", operatorsStack);
-									context.debugInfo("Operand Stack", postfix);
-								}
-							}
-
-							break;
-						}
-					} else {
-						break;
-					}
-				}
-
-				if (!pushedCurrent && !nextOperator.shouldSkip()) {
-					operatorsStack.push(next);
-
-					if (context.isDebug()) {
-						context.debugInfo("Operator Stack", operatorsStack);
-						context.debugInfo("Operand Stack", postfix);
-					}
-				}
-			} else if (UnitSymbol.LP.is(next)) {
-				operatorsStack.push(UnitSymbol.LP.unit);
-
-				if (context.isDebug()) {
-					context.debugInfo("Operator Stack", operatorsStack);
-					context.debugInfo("Operand Stack", postfix);
-				}
-			} else if (UnitSymbol.RP.is(next)) {
-				while (!UnitSymbol.LP.is(operatorsStack.peek())) {
-					var value = operatorsStack.pop();
-
-					if (!UnitSymbol.LP.is(value) && !UnitSymbol.RP.is(value)) {
-						postfix.add(value);
-
-						if (context.isDebug()) {
-							context.debugInfo("Operator Stack", operatorsStack);
-							context.debugInfo("Operand Stack", postfix);
-						}
-					}
-				}
-
-				operatorsStack.pop();
-
-				if (context.isDebug()) {
-					context.debugInfo("Operator Stack", operatorsStack);
-					context.debugInfo("Operand Stack", postfix);
-				}
-
-				if (!operatorsStack.isEmpty() && operatorsStack.peek() instanceof FuncUnit) {
-					postfix.add(operatorsStack.pop());
-
-					if (context.isDebug()) {
-						context.debugInfo("Operator Stack", operatorsStack);
-						context.debugInfo("Operand Stack", postfix);
-					}
-				}
-			} else if (next instanceof FuncUnit) {
-				operatorsStack.push(next);
-
-				if (context.isDebug()) {
-					context.debugInfo("Operator Stack", operatorsStack);
-					context.debugInfo("Operand Stack", postfix);
-				}
-			} else {
-				// negate?
-
-				postfix.add(next);
-
-				if (context.isDebug()) {
-					context.debugInfo("Operator Stack", operatorsStack);
-					context.debugInfo("Operand Stack", postfix);
-				}
-			}
-		}
-
-		while (!operatorsStack.isEmpty()) {
-			var last = operatorsStack.pop();
-
-			if (!UnitSymbol.LP.is(last) && !UnitSymbol.RP.is(last)) {
-				postfix.add(last);
-			}
-		}
-
-		if (context.isDebug()) {
-			context.debugInfo("Postfix", postfix);
-		}
-
-		for (var token : postfix) {
-			token.interpret(this);
-
-			if (context.isDebug()) {
-				context.debugInfo("Result Stack", resultStack);
-			}
-		}
-
-		var lastUnit = resultStack.pop();
-		this.unit = lastUnit.optimize();
+		var unitToken = readFully();
+		var rawUnit = unitToken.interpret(this);
+		this.unit = rawUnit.optimize();
 	}
 
 	public Unit getUnit() {
 		return unit;
 	}
 
-	private Unit createTokenFromString(String input) {
-		var constant = FixedNumberUnit.CONSTANTS.get(input);
-
-		if (constant != null) {
-			return constant;
-		}
-
-		try {
-			return FixedNumberUnit.ofFixed(Double.parseDouble(input));
-		} catch (Exception ex) {
-			FuncUnit func = context.getFunction(input);
-			return func == null ? VariableUnit.of(input) : func;
-		}
-	}
-
 	@Override
 	public String toString() {
 		return infix.toString();
+	}
+
+	public UnitToken nextToken() {
+		if (++infixPos >= infix.size()) {
+			throw parsingError("EOL!");
+		}
+
+		return infix.get(infixPos);
+	}
+
+	public UnitToken peekToken() {
+		if (infixPos + 1 >= infix.size()) {
+			return null;
+		}
+
+		return infix.get(infixPos + 1);
+	}
+
+	public boolean ifNextToken(UnitToken token) {
+		if (token.equals(peekToken())) {
+			nextToken();
+			return true;
+		}
+
+		return false;
+	}
+
+	public UnitToken readFully() {
+		PostfixUnitToken postfix = new PostfixUnitToken(new ArrayList<>());
+
+		if (ifNextToken(UnitSymbol.LP)) {
+			postfix.infix().add(readFully());
+
+			if (!ifNextToken(UnitSymbol.RP)) {
+				throw parsingError("Expected ')', got '" + peekToken() + "'!");
+			}
+		} else {
+			postfix.infix().add(readSingleToken());
+		}
+
+		while (peekToken() instanceof UnitSymbol symbol && symbol.op != null) {
+			postfix.infix().add(nextToken());
+
+			if (peekToken() == UnitSymbol.LP) {
+				postfix.infix().add(readFully());
+			} else {
+				postfix.infix().add(readSingleToken());
+			}
+		}
+
+		return postfix.infix().size() == 1 ? postfix.infix().get(0) : postfix;
+	}
+
+	public UnitToken readSingleToken() {
+		UnitToken token = nextToken();
+
+		if (token instanceof UnitSymbol symbol && symbol.unaryOp != null) {
+			if (peekToken() == UnitSymbol.LP) {
+				return new UnaryOpUnitToken(symbol, readFully());
+			} else {
+				return new UnaryOpUnitToken(symbol, readSingleToken());
+			}
+		}
+
+		if (token instanceof StringUnitToken str) {
+			if (ifNextToken(UnitSymbol.LP)) {
+				FunctionUnitToken func = new FunctionUnitToken(str.name(), new ArrayList<>());
+
+				while (true) {
+					if (ifNextToken(UnitSymbol.RP)) {
+						break;
+					} else if (!ifNextToken(UnitSymbol.COMMA)) {
+						func.args().add(readFully());
+					}
+				}
+
+				return func;
+			}
+
+			return str;
+		}
+
+		throw parsingError("Unexpected token: " + token);
+	}
+
+	public IllegalStateException parsingError(String error) {
+		return new IllegalStateException("Error parsing '" + input + "' @ " + (infixPos < 0 || infixPos >= inputStringPos.size() ? -1 : inputStringPos.get(infixPos)) + ": " + error);
 	}
 }
